[gd_scene load_steps=3 format=2]

[ext_resource path="res://Themes/MainMenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/CharacterOptions/CharacterOption.gd" type="Script" id=2]

[node name="CharacterOption" type="Control"]
margin_right = 230.0
margin_bottom = 100.0
rect_min_size = Vector2( 230, 100 )
size_flags_horizontal = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="MarginContainer"]
margin_right = 230.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Button/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 226.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="TextContainer" type="MarginContainer" parent="MarginContainer/Button/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 222.0
margin_bottom = 40.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 8
custom_constants/margin_left = 12
custom_constants/margin_bottom = 8

[node name="DescriptiveText" type="Label" parent="MarginContainer/Button/MarginContainer/VBoxContainer/TextContainer"]
unique_name_in_owner = true
margin_left = 12.0
margin_top = 8.0
margin_right = 210.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 1
align = 1
valign = 1
autowrap = true

[node name="Control" type="Control" parent="MarginContainer/Button/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 222.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 48 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="ValuesBackgroundPanel" type="Panel" parent="MarginContainer/Button/MarginContainer/VBoxContainer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 60 )
mouse_filter = 2

[node name="ValuesBackground" type="ColorRect" parent="MarginContainer/Button/MarginContainer/VBoxContainer/Control"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Button/MarginContainer/VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_left = 4

[node name="ValuesContainer" type="HBoxContainer" parent="MarginContainer/Button/MarginContainer/VBoxContainer/Control/MarginContainer"]
unique_name_in_owner = true
margin_left = 4.0
margin_right = 218.0
margin_bottom = 48.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4

[connection signal="mouse_entered" from="MarginContainer/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="resized" from="MarginContainer/Button/MarginContainer/VBoxContainer/TextContainer/DescriptiveText" to="." method="_on_DescriptiveText_resized"]
